--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GH_PAT }}
           scopes: write:packages
 
   build-and-push:
@@ -37,6 +37,6 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ steps.metadata.outputs.tags }}
-          # tags: latest
+          #tags: ${{ steps.metadata.outputs.tags }}
+          tags: latest
           labels: ${{ steps.metadata.outputs.labels }}
