--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GH_PAT }}
           scopes: write:packages
 
   build-and-push:
@@ -38,5 +38,5 @@ jobs:
           file: ./Dockerfile
           push: true
           #tags: ${{ steps.metadata.outputs.tags }}
-          tags: latest
+          tags: ghcr.io/${{ github.repository }}/nodejs:2.0
           labels: ${{ steps.metadata.outputs.labels }}
