--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,29 +1,28 @@
-name: Build & Publish Docker Image
+name: Build & Publish
 on:
   release:
     types: [published]
 
 jobs:
-  login:
+  push-to-ghcr:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GH_PAT }}
-          scopes: write:packages
-
-      - name: Checkout code
-        uses: actions/checkout@v2
       - name: Extract Metadata
         id: metadata
-        uses: docker/metadata-action@v5
+        uses: docker/metadata-action@v4
         with:
-          images: ghcr.io/${{ github.repository }}
+          images: |
+            ghcr.io/${{ github.repository }}
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
@@ -33,6 +32,5 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          #tags: ${{ steps.metadata.outputs.tags }}
-          tags: ghcr.io/${{ github.repository }}/nodejs:5.5
+          tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
