--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,5 +32,5 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ steps.metadata.outputs.tags }}
+          tags: latest
           labels: ${{ steps.metadata.outputs.labels }}
