--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,5 +33,5 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: latest
+          tags: ghcr.io/${{ github.repository }}/nodejs:7.5
           labels: ${{ steps.metadata.outputs.labels }}
