--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,11 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
+
+      - name: Debug Metadata Tags
+        run: |
+          echo "Metadata Tags: ${{ steps.metadata.outputs.tags }}"
+
       - name: Build & Publish Docker Image
         uses: docker/build-push-action@v5
         with:
